# crewai-tutorial

./: README.md  pyproject.toml  report.md
src/ai_latest_dev/: crew.py  main.py
